# TextTranslate

./: CMakeLists.txt  README.MD  text_translate.kdev4
src/: based_type.h  google_translator.cpp  google_translator.h  http_action.cpp  http_action.h  itranslator.cpp  itranslator.h  main.cpp  my_log.cpp  my_log.h  rio.cpp  rio.h  translate_content.cpp  translate_content.h
